# arcanum-backend-services

./: .gitignore  .gitmodules  2a  Cargo.toml  Dockerfile  README.md  bootstrap.yaml  docker-compose.yml  node.Dockerfile  package-lock.json  package.json  pnpm-lock.yaml  rpc.yaml  scheme.yaml  trading-view.Dockerfile  uniswap.yaml
.github/workflows/: main.yml
0x-api/src/: main.ts
api/: Cargo.toml  api.Dockerfile  package.json  pnpm-lock.yaml
api/src/: index.ts  main.rs  main.ts
arwave_client/: Cargo.toml
arwave_client/src/: common.rs  lib.rs  rpc.rs  transaction.rs  utils.rs  wallet.rs
arweave_client/: Cargo.toml
arweave_client/src/: chunks.rs  lib.rs  rpc.rs  transaction.rs  tx_builder.rs  uploader.rs  utils.rs  wallet.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/cache/: Cargo.toml
core/cache/src/: cache.rs  crypto.rs  lib.rs
core/ledger/: Cargo.toml
core/ledger/src/: disc.rs  ir.rs  lib.rs  mock.rs
core/multipool/: Cargo.toml
core/multipool/src/: errors.rs  expiry.rs  lib.rs  read.rs  tests.rs  write.rs
core/multipool/src/tests/: cases.rs  errors.rs  expiry.rs  mod.rs  multipool_builder.rs  read.rs  write.rs
core/src/: contracts.rs  lib.rs
core/src/abi/: trader.json
core/src/chain_workers/: mod.rs  (+1 more)
core/storage/: Cargo.toml
core/storage/src/: builder.rs  contracts.rs  factory_watcher.rs  hook.rs  ir_builder.rs  lib.rs  pg_fetching.rs  price_fetch.rs  storage.rs  tests.rs
core/storage/src/abi/: multipool.json  multipool_factory.json  trader.json
core/storage/src/kafka/: event_fetching.rs  mod.rs
core/storage/src/multipool_with_meta/: mod.rs  multipool_events.rs  multipool_prices.rs
core/storage/src/pg/: event_fetching.rs  mod.rs  price_push.rs
core/storage/test/: db  snap.00000000000000FD
core/storage/tests/: happy_path.rs
core/types/: Cargo.toml  Multipool.json
etl/: Cargo.toml  config.yaml
etl/src/: lib.rs  processor.rs
etl/src/processors/: mod.rs  pg.rs
gateway/: Cargo.toml  config_example.yaml
gateway/postgress/: assets.sql
gateway/src/: cache.rs  error.rs  indexer.rs  lib.rs  log_target.rs  main.rs  metrics.rs  price_fetcher.rs
gateway/src/db/queries/: fetch_candle.sql  fetch_candles.sql
gateway/src/indexer/: asset_change.rs  create_pool.rs  mod.rs  owner_change.rs  share_transfer.rs
gateway/src/layers/: api_metrics.rs  backoff.rs  mod.rs
gateway/src/routes/: account.rs  assets.rs  chains.rs  charts.rs  mod.rs  portfolio.rs
gateway/src/service/: log_target.rs  metrics.rs  mod.rs
indexer/: Cargo.toml  Dockerfile  config.yaml  package.json
indexer/migrations/: 20241226150758_init_schema.sql
indexer/sql/: create_all.sql
indexer/src/: contracts.rs  index.ts  indexer.rs  lib.rs  main.rs  multipool_storage.rs  raw_storage.rs  test.rs
indexer/src/processors/: embedded.rs  kafka.rs  mod.rs  pg.rs
indexer/test_db/: db
log-engine/: package.json  pnpm-lock.yaml
log-engine/src/: adapter.js  engine.js  index.js  log.js  log.ts
log-fetcher/src/: main.ts  multipool-abi.ts
log_engine/: package.json  tsconfig.json
log_engine/src/: Multipool.json  adapter.ts  engine.ts  index.ts  log.ts  types.ts
metadata/: default.sql  system  system.sql
mock-oracle/: package.json  scheme.yaml
mock-oracle/ABI/: Multipool.json
mock-oracle/src/: index.ts  main.ts  multipool-abi.ts
multipool-assets-symbol-fetcher/src/: main.ts
multipool-tracker/: .gitignore  Cargo.toml  Dockerfile  config.yaml  rpc.yaml
multipool-tracker/core/src/chain_workers/: multipool_events.rs
multipool-tracker/core/src/multipool/: expiry.rs
multipool-tracker/core/src/storage/: builder.rs
multipool-tracker/core/src/uniswap/: mod.rs
multipool-tracker/src/: bootstrap.rs  lib.rs  rpc.rs
multipool-tracker/src/abi/: trader.json
multipool-tracker/src/chain_workers/: mod.rs  multipool_events.rs  multipool_prices.rs  watcher.rs
multipool-tracker/src/config/: mod.rs
multipool-tracker/src/crypto/: mod.rs
multipool-tracker/src/multipool/: expiry.rs  mod.rs
multipool-tracker/src/multipool_storage/: chain.rs  errors.rs  expiry.rs  mod.rs  read.rs  tests.rs  write.rs
multipool-tracker/src/rpc_controller/: mod.rs
multipool-tracker/src/storage/: ir.rs  ledger.rs  mod.rs
multipool-tracker/src/trader/: analyzer.rs  mod.rs
multipool-tracker/trading-view-api/src/: main.ts
multipool_price_fetcher/: Cargo.toml
multipool_price_fetcher/src/: main.rs  processor.rs
node/: Cargo.toml
node/src/: crypto.rs  main.rs
planner/: package.json  pnpm-lock.yaml
planner/src/: index.ts  main.ts
postgres-worker/: Cargo.toml
postgres-worker/src/: main.rs
postgress/: create_backend.sql  log_and_indexers.sql  more_asset_info.sql  trader_stats.sql  tv.sql
price-fetcher/: Dockerfile  package.json
price-fetcher/src/: index.ts  main.ts
price-oracle/: Cargo.toml  Dockerfile  config.yaml
price-oracle/src/: lib.rs  main.rs  main.ts  multipool-abi.ts
price_fetcher/: Cargo.toml  config.yaml
price_fetcher/src/: lib.rs  main.rs  processor.rs
revenue-fetcher/: .env  package.json  pnpm-lock.yaml
revenue-fetcher/src/: index.ts  main.ts
service/: Cargo.toml
service/src/: health_check.rs  initializer.rs  lib.rs  logging.rs
sql/: 1_create_tables.sql  2_history_insert_procedure.sql.sql  2_istory_insert_procedure.sql.sql  create_tables.sql  pg_indexer.sql
sql/tests/: happy_path.sql
target-share-oracle/src/: main.ts
trader/: Cargo.toml  config.yaml
trader/clickhouse/: trades.sql
trader/src/: analyzer.rs  cashback.rs  clickhouse.rs  contracts.rs  execution.rs  hook.rs  lib.rs  prices.rs  trade.rs
trader/src/cache/: cache.rs  mod.rs  multipool.rs
trader/src/strategies/: mod.rs
trader/src/uniswap/: compute_address.rs  mod.rs
trader/trader/: analyzer.rs  mod.rs  uniswap.rs
trader/uniswap/: observations.rs
trading-view-api/: Cargo.toml
trading-view-api/postgress/: tv.sql
trading-view-api/src/: main.rs
tv-bot/src/: main.ts  multipool-abi.ts
utils/rpc-controller/: Cargo.toml
wasm_swapper/: Cargo.toml
wasm_swapper/src/: adapters.rs  contracts.rs  lib.rs  read.rs  trade_data.rs
(+18 files in other folders)
