[workspace]
members = [
    "core/*",
    "trader",
    "gateway",
    "indexer",
]
resolver = "2"

[profile.release]
overflow-checks = true
strip = true

[workspace.dependencies]
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.79"
alloy = { version = "0.9.2", features = ["full", "serde"] }
borsh = { version = "1.5.5", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "sqlite", "bigdecimal"] }
axum = "0.8.1"
sled = "0.34.7"
serde = { version = "1.0.192", features = ["derive"] }
serde_json="1.0.108"
log = "0.4.20"
dashmap = "6.1.0"
