[package]
name = "multipool-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ratelimit = "0.9.0"
serde = "1.0.192"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
primitive-types = "0.12.2"
reqwest = { version = "0.11.12", default-features = false, features = [
    "rustls",
] }
serde_qs = "0.12.0"
futures = "0.3.29"
actix-cors = "0.6.4"
actix-web = { version = "4.5.1", features = ["rustls"] }
tokio-postgres = "0.7.10"

url = "2.5.0"
multipool-ledger = { path = "../core/ledger" }
multipool-storage = { path = "../core/storage" }
rpc-controller = { path = "../utils/rpc-controller" }

async-process = "2.1.0"

sorts = "0.6.1"
clap = { version = "4.5.0", features = ["derive"] }

colored = "2.1.0"

env_logger = "0.10.2"
log = "0.4.20"

tokio.workspace = true
anyhow.workspace = true
alloy.workspace = true
