[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
log.workspace = true

axum.workspace = true
anyhow.workspace = true
tokio.workspace = true
sqlx.workspace = true
alloy.workspace = true
sled.workspace = true
rdkafka.workspace = true

dashmap.workspace = true
bigdecimal.workspace = true
serde.workspace = true
serde_json.workspace = true

tower-http = {version= "0.6.2", features=["cors"]}
multipool-types = { path = "../core/types/" }
multipool-storage = { path = "../core/storage/" }
multipool = { path = "../core/multipool/" }
