[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "./bin/gateway.rs"

[dependencies]
axum.workspace = true
anyhow.workspace = true
tokio.workspace = true
indexer1.workspace = true
sqlx.workspace = true
alloy.workspace = true
lazy_static.workspace = true
axum-msgpack.workspace = true

alloy-multicall.workspace = true

dashmap.workspace = true
bigdecimal.workspace = true
serde.workspace = true
serde_json.workspace = true

tower = { version = "0.5.2" }
tower-http = {version= "0.6.2", features=["cors"]}
backend-service = { path = "../service/" }
multipool-types = { path = "../core/types/" }
multipool = { path = "../core/multipool/" }
