[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
multipool-storage = { version = "0.1.0", path = "../core/storage" }

tokio.workspace = true
anyhow.workspace = true
alloy.workspace = true

futures = "0.3.31"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres"] }
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
sled = "0.34.7"
bincode = "1.3.3"
multipool = { version = "0.1.0", path = "../core/multipool" }
tokio-stream = { version = "0.1.17", features = ["time"] }
crossbeam-channel = "0.5.14"
dashmap = "6.1.0"
clap = { version = "4.5.26", features = ["derive"] }
env_logger = "0.11.6"
serde_yml = "0.0.12"
