[package]
name = "multipool-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow.workspace = true
alloy.workspace = true
sqlx.workspace = true

multipool-types = { path = "../core/types/" }
multipool-storage = { path = "../core/storage/" }
multipool = { path = "../core/multipool/" }

sled = "0.34.7"

#indexer1 = "0.1.1"

indexer1 = { path = "../../indexer1/" }
