[package]
name = "multipool-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "indexer"
path = "./bin/indexer.rs"

[dependencies]
tokio.workspace = true
anyhow.workspace = true
alloy.workspace = true
sqlx.workspace = true
sled.workspace = true
rdkafka.workspace = true
reqwest.workspace = true

serde.workspace = true
serde_json.workspace = true
borsh.workspace = true

indexer1.workspace = true

multipool-types = { path = "../core/types/" }
multipool-storage = { path = "../core/storage/" }
multipool = { path = "../core/multipool/" }
backend-service = { path = "../service/" }
lru = "0.13.0"

