[package]
name = "multipool-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio={ version = "1.34.0", features = ["full"] }
ethers="2.0"
serde="1.0.192"
serde_yaml="0.9.27"
serde_json="1.0.108"
primitive-types="0.12.2"
reqwest="0.11.12"
serde_qs = "0.12.0"
futures = "0.3.29"
actix-cors = "0.6.4"
actix-web = "4"
dashmap = "5.5.3"
tokio-postgres = "0.7.10"
