[package]
name = "backend-service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true 
serde_yaml.workspace = true 
serde.workspace = true

reqwest.workspace = true 
anyhow.workspace = true 
tokio.workspace = true 
futures.workspace = true 

colored = "2.1.0"

pretty_env_logger = "0.5.0"
log = { version = "0.4.21", features = ["kv", "kv_serde"] }

tracing = "0.1.40"

hyper = { version = "1.4.1", features = ["full"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1.6", features = ["full"] }

opentelemetry_sdk = { version = "0.22.0", features = ["logs", "trace", "metrics", "rt-tokio"] }
opentelemetry-appender-log = { version = "0.3.0", default-features = false }
opentelemetry = { version = "0.22.0", features = ["logs", "trace", "metrics"] }
opentelemetry-stdout = { version = "0.3.0", features = ["logs", "trace", "metrics"] }
opentelemetry-otlp = { version = "0.15.0", features = ["logs", "trace", "metrics", "http-proto", "reqwest-client"] }
once_cell = "1.19.0"

