[package]
name = "multipool-trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "trader"
path = "./bin/trader.rs"

[dependencies]
rand = "0.8.5"
ratelimit = "0.9.0"
serde = "1.0.192"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
primitive-types = "0.12.2"
serde_qs = "0.12.0"
futures = "0.3.29"
actix-cors = "0.6.4"
actix-web = { version = "4.5.1", features = ["rustls"] }
tokio-postgres = "0.7.10"

async-process = "2.1.0"

sorts = "0.6.1"
clap = { version = "4.5.0", features = ["derive"] }

colored = "2.1.0"

env_logger = "0.10.2"
log = { version = "0.4.21", features = ["kv", "kv_serde"] }

clickhouse = "0.13.1"

alloy-sol-types = "0.8.21"

multipool-types = { path = "../core/types/" }
multipool = { path = "../core/multipool" }
multipool-storage = { path = "../core/storage" }
backend-service = { path = "../service" }

anyhow.workspace = true
tokio.workspace = true
alloy.workspace = true
reqwest.workspace = true
sled.workspace = true
sqlx.workspace = true
dashmap.workspace = true
bigdecimal.workspace = true
