[package]
name = "wasm-swapper"
version = "0.0.0"
authors = ["BadConfig <array.clean@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[profile.release]
lto = true
opt-level = "s"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde="1.0.192"
anyhow = "1.0.79"
ethers = { version = "2.0.14", features = ["abigen", "ws"] }
serde-wasm-bindgen = "0.6.0"
lazy_static = "1.4.0"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3.30"
wasm-bindgen-futures = "0.4.36"
wasm-bindgen = { version = "0.2.86", features = ["serde-serialize"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.63", features = ["console"] }
wasm-timer = "0.2.5"
async-std = "1.12.0"
multipool = { path = "../core/multipool" }
reqwest = "0.11.24"

[dev-dependencies]
wasm-bindgen-test = "0.3.36"
