[package]
name = "multipool-cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ratelimit = "0.9.0"
anyhow = "1.0.79"
tokio={ version = "1.34.0", features = ["full"] }
ethers= { version = "2.0.13", default-features=false, features = ["rustls"] }
serde="1.0.192"
serde_yaml="0.9.27"
serde_json="1.0.108"
primitive-types="0.12.2"
reqwest= { version = "0.11.12", default-features=false, features = ["rustls"] }
serde_qs = "0.12.0"
futures = "0.3.29"
actix-cors = "0.6.4"
actix-web = { version = "4.5.1", features = ["rustls"] }
tokio-postgres = "0.7.10"

multipool-storage = { path = "../storage" }

dashmap = "5.5.3"
async-process = "2.1.0"

multipool = { path = "../multipool" }

url = "2.5.0"

sorts = "0.6.1"
clap = { version = "4.5.0", features = ["derive", "string"] }

colored = "2.1.0"

env_logger = "0.10.2"
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
