[package]
name = "multipool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ethers = { version = "2.0.14", features = ["abigen"] }
serde="1.0.192"
serde_yaml="0.9.27"
serde_json="1.0.108"
primitive-types="0.12.2"
