[package]
name = "multipool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
serde = "1.0.192"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
primitive-types = "0.12.2"

serde_qs = "0.12.0"
futures = "0.3.29"

borsh.workspace = true
alloy.workspace = true

multipool-types = { path = "../types/" } 

clap = { version = "4.5.0", features = ["derive"] }

env_logger = "0.10.2"
log = "0.4.20"


[dev-dependencies]
pretty_assertions = "1.4.0"
lazy_static = "1.4.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
