[package]
name = "multipool-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

anyhow.workspace = true
tokio.workspace = true
borsh.workspace = true
alloy.workspace = true

multipool = { path = "../multipool" }
multipool-types = { path = "../types" }

sled = "0.34.7"

serde = "1.0.192"
serde_yaml = "0.9.27"
serde_json = "1.0.108"
primitive-types = "0.12.2"

serde_qs = "0.12.0"
futures = "0.3.29"

async-process = "2.1.0"

sorts = "0.6.1"
clap = { version = "4.5.0", features = ["derive"] }

itertools = "0.14.0"

colored = "2.1.0"

env_logger = "0.10.2"
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
